[package]
name = "rust-dns"
version = "0.1.0"
authors = ["Jos Dirksen <jos.dirksen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-parser = "0.8.0"
simplelog = "^0.7.4"
log = "0.4.8"
tokio = { version = "0.2", features = ["full"] }
